# ScenarioLab

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  PRD.md  UI_UX_REVIEW.md  autoresearch-scout-report.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  start.sh  tsconfig.json
backend/: Dockerfile  pyproject.toml
backend/app/: cli.py  config.py  cost_estimator.py  database.py  inference_modes.py  main.py
backend/app/analytics/: __init__.py  analytics_agent.py  cross_simulation.py  emergent_patterns.py  fairness.py  metrics_export.py  prompts.py  router.py  sensitivity.py  shapley.py
backend/app/api_integrations/: __init__.py  auth.py  database.py  router.py  webhooks.py
backend/app/db/: __init__.py  annotations.py  audit.py  branches.py  chat.py  connection.py  memories.py  reports.py  seeds.py  simulations.py
backend/app/graph/: __init__.py  entity_extractor.py  graphiti_service.py  graphrag.py  memory.py  neo4j_client.py  ontology_generator.py  router.py  seed_processor.py  zep_adapter.py
backend/app/llm/: __init__.py  anthropic_provider.py  capabilities_cache.py  cli_chatgpt_provider.py  cli_claude_provider.py  cli_codex_provider.py  cli_gemini_provider.py  database.py  factory.py  fine_tuning.py  inference_router.py  llamacpp_provider.py  ollama_provider.py  openai_provider.py  provider.py  router.py  wizard_models.py
backend/app/mcp/: __init__.py  router.py  server.py
backend/app/personas/: archetypes.py  behavioral_axioms.py  counterpart.py  designer.py  interview_extractor.py  library.py  router.py
backend/app/playbooks/: auto_template.py  copilot.py  manager.py  router.py
backend/app/reports/: __init__.py  annotations.py  llm_json_fences.py  models.py  narrative.py  report_agent.py  (+1 more)
backend/tests/: conftest.py  test_analytics_agent.py  test_cli_codex_provider.py  test_config.py  test_cost_estimator.py  test_custom_persona_repository.py  test_database.py  test_db_connection.py  test_db_simulations.py  test_designer_delete_outcome.py  test_designer_synthesis_summary.py  test_dual_create.py  test_dual_run_preset.py  test_entity_extractor_ontology.py  test_graph_seed_upload.py  test_graphiti_service.py  test_graphrag_cache.py  test_hybrid_simulation.py  test_inference_modes.py  test_inference_router.py  test_llm_capabilities.py  test_llm_factory.py  test_llm_provider_concurrency.py  test_main_lifespan_mcp_shutdown.py  test_mcp_graphiti_search_limit.py  test_miro_exporter.py  test_models.py  test_monte_carlo_convergence.py  test_narrative_turning_points.py  test_narrative_unexpected_outcomes_strings.py  test_neo4j_client.py  test_objectives.py  test_ontology_generator_snake.py  test_pdf_exporter_recommendation_priority.py  test_persona_refresh_research.py  test_personas_router_order.py  test_report_risk_severity_mapping.py  test_reports_router.py  test_simulation_agents_route.py  test_simulation_engine.py  (+5 more)
(+188 files in other folders)
