[project]
name = "scenariolab-backend"
version = "0.1.0"
description = "ScenarioLab AI war-gaming platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "neo4j>=5.15.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "aiosqlite>=0.19.0",
    "tenacity>=8.2.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "graphiti-core>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
scenariolab-sim = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# E501 is not ignored globally: line-length matches [tool.black] (120) so formatter + Ruff agree.
# Long unbroken strings (prompts, MCP tool schemas, interview questions) stay readable without reflow:
[tool.ruff.lint.per-file-ignores]
"app/mcp/server.py" = ["E501"]
"app/personas/archetypes.py" = ["E501"]
"app/personas/counterpart.py" = ["E501"]
"app/personas/interview_extractor.py" = ["E501"]
"app/reports/narrative.py" = ["E501"]
"app/simulation/backtesting.py" = ["E501"]
"app/simulation/market_intelligence.py" = ["E501"]
"tests/test_analytics_agent.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
